Botão de sinal terminao CSPFC

--- a/Rafael/CalculadoraSPFC/QCalculadoraSPFC/mainwindow.ui
+++ b/Rafael/CalculadoraSPFC/QCalculadoraSPFC/mainwindow.ui
@@ -1040,5 +1040,22 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>SignButton</sender>
+   <signal>clicked()</signal>
+   <receiver>lineEdit</receiver>
+   <slot>update()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>255</x>
+     <y>234</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>267</x>
+     <y>73</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
